After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643754 - Gentoo QA warnings: gnome-base/libgnomekbd-2.32.0: gkbd-keyboard-drawing.c: warning: implicit declaration of functions
Gentoo QA warnings: gnome-base/libgnomekbd-2.32.0: gkbd-keyboard-drawing.c: w...
Status: RESOLVED FIXED
Product: libgnomekbd
Classification: Core
Component: Config
2.32.x
Other Linux
: Normal minor
: ---
Assigned To: libgnomekbd maintainers
Sergey V. Udaltsov
Depends on:
Blocks:
 
 
Reported: 2011-03-03 06:26 UTC by Dan Wallis
Modified: 2011-03-03 08:18 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan Wallis 2011-03-03 06:26:04 UTC
When installing the gnome-base/libgnomekbd-2.32.0 package on my Gentoo system, I received the following notification:

 * QA Notice: Package has poor programming practices which may compile
 *            fine but exhibit random runtime failures.
 * gkbd-keyboard-drawing.c:2586: warning: implicit declaration of function ‘xkl_xkb_config_native_prepare’
 * gkbd-keyboard-drawing.c:2590: warning: implicit declaration of function ‘xkl_xkb_config_native_cleanup’

 * Please do not file a Gentoo bug and instead report the above QA
 * issues directly to the upstream developers of this software.
 * Homepage: http://www.gnome.org
 * ERROR: gnome-base/libgnomekbd-2.32.0 failed:
 *   install aborted due to poor programming practices shown above


Looking through the build output, here are the warnings in context:

make  all-am
make[3]: Entering directory `/var/tmp/portage/gnome-base/libgnomekbd-2.32.0/work/libgnomekbd-2.32.0/libgnomekbd'
  CC     libgnomekbd_la-gkbd-desktop-config.lo
  CC     libgnomekbd_la-gkbd-keyboard-config.lo
  CC     libgnomekbd_la-gkbd-util.lo
  CCLD   libgnomekbd.la
  CC     libgnomekbdui_la-gkbd-indicator-config.lo
  CC     libgnomekbdui_la-gkbd-indicator.lo
  CC     libgnomekbdui_la-gkbd-status.lo
  CC     libgnomekbdui_la-gkbd-indicator-marshal.lo
  CC     libgnomekbdui_la-gkbd-indicator-plugin-manager.lo
  CC     libgnomekbdui_la-gkbd-keyboard-drawing-marshal.lo
  CC     libgnomekbdui_la-gkbd-keyboard-drawing.lo
gkbd-keyboard-drawing.c: In function ‘gkbd_keyboard_drawing_new_dialog’:
gkbd-keyboard-drawing.c:2586: warning: implicit declaration of function ‘xkl_xkb_config_native_prepare’
gkbd-keyboard-drawing.c:2590: warning: implicit declaration of function ‘xkl_xkb_config_native_cleanup’
  CCLD   libgnomekbdui.la
LC_ALL=C /usr/bin/intltool-merge -s -u -c ../po/.intltool-merge-cache ../po desktop_gnome_peripherals_keyboard_xkb.schemas.in desktop_gnome_peripherals_keyboard_xkb.schemas
Generating and caching the translation database
Merging translations into desktop_gnome_peripherals_keyboard_xkb.schemas.
make[3]: Leaving directory `/var/tmp/portage/gnome-base/libgnomekbd-2.32.0/work/libgnomekbd-2.32.0/libgnomekbd'
make[2]: Leaving directory `/var/tmp/portage/gnome-base/libgnomekbd-2.32.0/work/libgnomekbd-2.32.0/libgnomekbd'
Making all in test
Comment 1 Sergey V. Udaltsov 2011-03-03 08:18:58 UTC
Fair enough. It is somewhat ugly access to libxklavier internals - anyway, fixed.