explicit declaration of internal libxklavier functions

https://bugzilla.gnome.org/show_bug.cgi?id=643754